# botfarm

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.githooks/: pre-commit
botfarm/: agent.py  agent_aider.py  agent_claude.py  agent_codex.py  aider.py  auth_setup.py  cli.py  codex.py  codex_usage.py  config.py  credentials.py  dashboard.py  db.py  devserver.py  git_update.py  linear.py  linear_cleanup.py  models.py  notifications.py  preflight.py  process.py  project_setup.py  qa_cleanup.py  slots.py  supervisor.py  supervisor_ops.py  supervisor_recovery.py  supervisor_workers.py  systemd_service.py  usage.py  worker.py  worker_claude.py  worker_stages.py  workflow.py
docs/: bugtracker-abstraction.md  cli-add-project.md  codex-cli.md  competitors.md  configuration.md  dashboard.md  database.md  features.md  improvements.md  investigation-live-output-streaming.md  investigation-realtime-context-monitoring.md  investigation-test-instance-architecture.md  jira-workflow.md  linear-archiving.md  linear-workflow.md  philosophy.md  qa-agent.md  refactoring-analysis.md  runtime-files.md  self-hosted-runners-investigation.md  systemd.md  usage-api-audit.md
scripts/: add_slot.sh
tests/: conftest.py  helpers.py  seed_test_db.py  test_adapter_registry.py  test_add_project.py  test_agent.py  test_agent_adapters.py  test_aider.py  test_auth_setup.py  test_backfill_history.py  test_bugtracker.py  test_cli.py  test_cli_cleanup.py  test_cli_init.py  test_cli_init_claude_md.py  test_cli_remove_project.py  test_cli_stop.py  test_codex.py  (+50 more)
(+134 files in other folders)
