[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botfarm"
version = "0.1.0"
description = "Autonomous Linear ticket dispatcher for Claude Code agents"
requires-python = ">=3.12"
dependencies = [
    "click",
    "rich",
    "pyyaml",
    "httpx",
    "aiosqlite",
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
]

[project.scripts]
botfarm = "botfarm.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
