[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botfarm"
version = "0.1.0"
description = "Autonomous Linear ticket dispatcher for Claude Code agents"
requires-python = ">=3.12"
dependencies = [
    "click",
    "rich",
    "pyyaml",
    "httpx",
    "aiosqlite",
    "fastapi",
    "uvicorn",
    "jinja2",
]

[tool.setuptools.package-data]
botfarm = ["migrations/*.sql", "static/fonts/*.woff2"]

[project.scripts]
botfarm = "botfarm.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-n auto -m 'not playwright'"
markers = [
    "playwright: Playwright E2E tests (require browser)",
]
